--- a/src/app/Components/header/header.component.html
+++ b/src/app/Components/header/header.component.html
@@ -5,6 +5,7 @@
 
     <div class="ss-header-text">ShapeShifter</div>
     <div class="ss-header-button-container">
-        <button class="ss-header-button">Sign up now</button>
+        <button *ngIf="!isSignupPage" routerLink="/signup" class="ss-header-button-signup">Sign up now</button>
+    <button *ngIf="isSignupPage" routerLink="" class="ss-header-button-login">Log in</button>
     </div>
 </div>
