--- a/src/app/Components/header/header.component.scss
+++ b/src/app/Components/header/header.component.scss
@@ -43,7 +43,7 @@
     padding:30px;
 }
 
-.ss-header-button{
+.ss-header-button-signup{
     background-color: var(--blue);
     border:none;
     border-radius: 30px;
@@ -55,5 +55,20 @@
     font-weight: 700;
     &:hover{
         background-color: var(--yellow);
+    }
+}
+
+.ss-header-button-login{
+    background-color: var(--yellow);
+    border:none;
+    border-radius: 30px;
+    width: auto;
+    padding:15px;
+    
+    color: var(--dark-grey);
+    cursor:pointer;
+    font-weight: 700;
+    &:hover{
+        background-color: var(--blue);
     }
 }
