--- a/src/app/Components/login/login.component.html
+++ b/src/app/Components/login/login.component.html
@@ -3,15 +3,15 @@
         <div class="ss-header-text">Login</div>
     </div>
   
-    <form class="ss-login-form" action="">
+    <form class="ss-login-form" action="" [formGroup]="loginForm">
         <div class="ss-username-container">
             <p>Username</p>
-            <input class="ss-login-input-username" type="text">'
+            <input formControlName="username" class="ss-login-input-username" type="text">'
         </div>
         
         <p>Password</p>
-        <input class="ss-login-input-password" type="password">
-        <button class="ss-login-button">Log in</button>
+        <input formControlName="password" class="ss-login-input-password" type="password">
+        <button class="ss-login-button" (click)="onLogin()" type="submit" [disabled]="loginForm.invalid">Log in</button>
     </form>
 
 
