--- a/src/app/Components/login/login.component.scss
+++ b/src/app/Components/login/login.component.scss
@@ -1,11 +1,11 @@
 .ss-login-container{
-    height:500px;
+
     width: 320px;
 
     position: absolute;
-    top: 40%; 
+    top: 52%; 
     left: 50%; 
-    transform: translateX(-50%);
+    transform: translate(-50%, -50%);
     text-align: center; 
 }
 
@@ -65,9 +65,6 @@ input{
 		text-align: center;
 		font-size: 16px;
 
-
-  
-	
 }
 
 .ss-login-button{
