--- a/src/app/Components/login/login.component.html
+++ b/src/app/Components/login/login.component.html
@@ -1,3 +1,4 @@
+<app-header></app-header>
 <div class="ss-login-container">
     <div class="ss-login-text-container">
         <div class="ss-header-text">Login</div>
