--- a/src/app/Components/header/header.component.html
+++ b/src/app/Components/header/header.component.html
@@ -1,5 +1,5 @@
 <div class="ss-header-container">
-    <div class="ss-logo-container">
+    <div class="ss-logo-container" (click)="goMainPage()">
         <img class="ss-logo" src="/assets/logo-shapeshifter.png" alt="">
     </div>
 
