--- a/src/app/Components/workout/workout.component.html
+++ b/src/app/Components/workout/workout.component.html
@@ -1,14 +1,69 @@
 <app-header></app-header>
 <div *ngIf="workout" class="workout-details">
+   <div style="display:flex;justify-content: space-between;">
     <h2>{{ workout.workoutName }}</h2>
-    <p class="workout-date">Date: {{ workout.workoutDate | date }}</p>
-  
+    <button class="remove-button" (click)="deleteWorkout(workout.workoutId, workout.workoutName)"><svg xmlns="http://www.w3.org/2000/svg" height="22" width="20" viewBox="0 0 448 512"><!--!Font Awesome Free 6.5.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2023 Fonticons, Inc.--><path fill="#ffffff" d="M135.2 17.7C140.6 6.8 151.7 0 163.8 0H284.2c12.1 0 23.2 6.8 28.6 17.7L320 32h96c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 96 0 81.7 0 64S14.3 32 32 32h96l7.2-14.3zM32 128H416V448c0 35.3-28.7 64-64 64H96c-35.3 0-64-28.7-64-64V128zm96 64c-8.8 0-16 7.2-16 16V432c0 8.8 7.2 16 16 16s16-7.2 16-16V208c0-8.8-7.2-16-16-16zm96 0c-8.8 0-16 7.2-16 16V432c0 8.8 7.2 16 16 16s16-7.2 16-16V208c0-8.8-7.2-16-16-16zm96 0c-8.8 0-16 7.2-16 16V432c0 8.8 7.2 16 16 16s16-7.2 16-16V208c0-8.8-7.2-16-16-16z"/></svg></button>
+   </div>
+    <p  class="workout-date">{{ workout.workoutDate | date }}</p>
+    
+    
     <div *ngFor="let exercise of workout.exercises" class="exercise-item">
-      <h3>{{ exercise.exerciseName }}</h3>
-      <p>Weight: {{exercise.weight}}</p>
-      <p>Reps: {{ exercise.reps }}</p>
-      <p>Sets: {{ exercise.sets }}</p>
-      <button >edit</button>
-      <button>delete</button>
-    </div>
+      
+          <h3>{{ exercise.exerciseName }}</h3>
+          <div class="p" *ngIf="!exercise.editMode">
+          <label>Weight: {{exercise.weight}}</label>
+          <label>Reps: {{ exercise.reps }}</label>
+          <label>Sets: {{ exercise.sets }}</label>
+      </div>
+      <form [formGroup]="exerciseForm" (ngSubmit)="saveUpdatedExercise(exercise)" class="exercise-group">
+      <div *ngIf="exercise.editMode" class="exercise-item">
+        <div class="parent-item">
+        <label style="width: 79.66px;" for="exerciseName">Name:</label>
+        <input style="width: 500px;"type="text" id="exerciseName" formControlName="exerciseName" />
+        </div>
+        <div class="parent-item">
+        <div class="item">
+        <label for="weight">Weight:</label>
+        <input type="number" id="weight" formControlName="weight" />
+        </div>
+        <div class="item">
+        <label for="reps">Reps:</label>
+        <input type="number" id="reps" formControlName="reps" />
+        </div>
+        <div class="item">
+        <label for="sets">Sets:</label>
+        <input type="number" id="sets" formControlName="sets" />
+        </div>
+      </div>
+      </div>
+      <button class="save btn" *ngIf="exercise.editMode">save</button>
+      <button class="cancel btn" *ngIf="exercise.editMode"(click)="cancelEditMode(exercise)" >cancel</button>
+    </form>
+      <button class="edit btn" *ngIf="!exercise.editMode"(click)="toggleEditMode(exercise)">edit</button>
+      
+      
+      
+      
+      <button class="delete btn" *ngIf="!exercise.editMode"(click)="deleteExercise(exercise.exerciseId, exercise.exerciseName)">delete</button>
   </div>
+  <form *ngIf="showAddExerciseForm" [formGroup]="addExerciseForm" (ngSubmit)="saveExercise()">
+    <label for="exerciseName">Exercise Name:</label>
+        <input type="text" id="exerciseName" formControlName="exerciseName" />
+    
+        <label for="weight">Weight:</label>
+        <input type="number" id="weight" formControlName="weight" />
+    
+        <label for="reps">Reps:</label>
+        <input type="number" id="reps" formControlName="reps" />
+    
+        <label for="sets">Sets:</label>
+        <input type="number" id="sets" formControlName="sets" />
+    <button type="submit">Save Exercise</button>
+  </form>
+  
+  <!-- Button to toggle the addExerciseForm -->
+  <button class="ss-add-exercise" (click)="toggleAddExerciseForm()">{{showAddExerciseForm ? 'Cancel' : 'Add Exercise'}}</button>
+
+  </div>
+
+  
