--- a/src/app/Components/workout/workout.component.scss
+++ b/src/app/Components/workout/workout.component.scss
@@ -1,14 +1,32 @@
 .workout-details {
-    position:absolute;
-    top:20%;
-    left:5%;
-    max-width: 600px;
-    margin: 0 auto;
-    padding: 20px;
-    background-color: #f5f5f5;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  top:15%;
+  color:white;
+  width: 700px;
+  max-height: 650px;
+  overflow-y:scroll;
+  margin: 0 auto;
+  left:50%;
+  background-color: rgba(51, 51, 51, 0.842);
+  position:absolute;
+  transform:translateX(-50%);
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  &::-webkit-scrollbar {
+    width: 8px;  /* Adjust the width as needed */
+}
+
+&::-webkit-scrollbar-thumb {
+    background-color: #f4f4f4;  /* Color of the thumb */
+    border-radius: 4px;  /* Roundness of the thumb */
+}
+
+&::-webkit-scrollbar-track {
+    background-color: rgba(50, 48, 48, 0.539);  /* Color of the track */
+}
   }
+  
   
   .workout-date {
     color: #888;
@@ -21,13 +39,95 @@
     background-color: #fff;
     border-radius: 4px;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+    
+    
   
     h3 {
       margin-bottom: 8px;
       color: #333;
     }
   
-    p {
+    label {
       color: #777;
+      width: 200px;
+      
+    
+    }
+    input{
+      width: 40px;margin-bottom:5px;
     }
   }
+
+  .parent-item{
+    display:flex;
+  }
+
+  .item{
+    width: 200px;
+  }
+
+  .p{
+    display:flex;
+    
+  }
+
+  .remove-button {
+    background-color: #dc3545;
+    color: #fff;
+    border: none;
+    padding: 8px;
+    border-radius: 5px;
+    cursor: pointer;
+    
+    
+}
+
+
+.form-control {
+  width: 100%;
+  padding: 8px;
+  box-sizing: border-box;
+  margin-bottom: 10px;
+
+}
+
+.ss-add-exercise{
+  margin-top:20px;
+  padding:10px 20px 10px 20px;
+  background-color: var(--yellow);
+  color: var(--dark-grey);
+  border-radius: 30px;
+  border:none;
+  cursor: pointer;
+
+  &:hover{
+      background-color: var(--yellow-hover);
+  }
+}
+
+.btn{
+  border: none;
+  padding: 5px;
+  border-radius: 5px;
+  cursor: pointer;
+  color:white;
+  margin:5px 5px 5px 0;
+}
+
+.edit{
+  background-color: var(--yellow);
+  color:black;
+}
+
+.delete{
+  background-color: #dc3545;
+}
+
+.cancel{
+  background-color: var(--dark-grey);
+  
+}
+
+.save{
+  background-color: rgb(41, 128, 0);
+}
