--- a/src/app/Components/user-overview/user-overview.component.scss
+++ b/src/app/Components/user-overview/user-overview.component.scss
@@ -2,7 +2,8 @@
 div {
     color:white;
     width: 1000px;
-    max-height: 500px;
+    max-height: 650px;
+    margin-left:140px;
     
 
     h2 {
