--- a/src/app/Components/workout-overview/workout-overview.component.scss
+++ b/src/app/Components/workout-overview/workout-overview.component.scss
@@ -1,17 +1,14 @@
 .ss-main-content {
-    position: absolute;
-    top:50%;
-    transform:translateY(-50%);
-    left:5%;
-    width: 500px;
-    text-align: center;
-    margin: 20px auto;
-    padding: 20px;
+    width: 800px;
+    text-align: left;
+    margin: auto;
+    padding: 0 20px 0 200px;
     
   }
   h2 {
-    color: #ffffff;
-    padding:10px;
+    color: var(--yellow);
+    top:0;
+    margin-bottom:50px;
   }
   
   // Workout overview styles
@@ -28,7 +25,7 @@
   }
 
   &::-webkit-scrollbar-thumb {
-      background-color: #f4f4f4;  /* Color of the thumb */
+      background-color: #636363;  /* Color of the thumb */
       border-radius: 4px;  /* Roundness of the thumb */
   }
 
@@ -48,12 +45,15 @@
       border-radius: 10px;
       padding: 15px;
       margin-bottom: 10px;
-      background-color: white;
-  
+      background-color: rgba(109, 109, 109, 0.5);
+      
+      h3{
+        color:white;
+      }
       // Workout details
       .ss-workout-details {
         font-size: 0.9em;
-        color: #666;
+        color: #d1d1d1;
       }
       &:hover{
         background-color: #9a9898;
@@ -86,3 +86,12 @@
   }
 }
 
+select{
+  border: solid 4px var(--blue);
+  border-radius: 5px;
+  font-size: 12px;
+  padding:5px;
+  position: absolute;
+  right:50px;
+  top:0;
+}
