bmi tracker done

--- a/src/app/Components/add-workout/add-workout.component.scss
+++ b/src/app/Components/add-workout/add-workout.component.scss
@@ -3,7 +3,7 @@
 .ss-main-content {
     width: 800px;
     text-align: left;
-
+    
     padding: 0 20px 0 200px;
 
     
@@ -16,7 +16,7 @@
 
 
 .workout-form {
-
+    border: 2px solid var(--blue);
     color:white;
 
     max-height: 550px;
