--- a/src/app/Components/user-navbox/user-navbox.component.html
+++ b/src/app/Components/user-navbox/user-navbox.component.html
@@ -3,6 +3,7 @@
         <a routerLink="/main/workout-overview" routerLinkActive="active-link">Workout Overview</a>
         <a routerLink="/main/addworkout" routerLinkActive="active-link">New Workout</a>
         <a routerLink="/main/bmi-tracker" routerLinkActive="active-link">BMI Tracker</a>
+        <!-- <a routerLink="/main/bmi-personal" routerLinkActive="active-link">Personal</a> -->
     </div>
     <div class="content">
         <router-outlet></router-outlet>
