--- a/src/app/Components/bmi-tracker/bmi-tracker.component.html
+++ b/src/app/Components/bmi-tracker/bmi-tracker.component.html
@@ -1,1 +1,30 @@
-<p>bmi-tracker works!</p>
+<div class="bmi-container">
+    
+    <form [formGroup]="bmiForm" (ngSubmit)="submitForm()"><h2>Input data</h2>
+        <div class="bmi-content">
+      <div class="bmi-items">
+        <label for="height">Height (cm):</label>
+        <input type="number" id="height" formControlName="height" required>
+  
+        <label for="weight">Weight (kg):</label>
+        <input type="number" id="weight" formControlName="weight" required>
+  
+        <label for="age">Age:</label>
+        <input type="number" id="age" formControlName="age" required>
+  
+        <label for="gender">Gender:</label>
+        <select style="margin-bottom:20px;" id="gender" formControlName="gender" required>
+          <option value="male">Male</option>
+          <option value="female">Female</option>
+          <option value="other">Other</option>
+        </select>
+      </div>
+      
+    </div>
+      <button type="submit">Calculate BMI</button>
+    </form><div class="bmi-info">
+        <h2 style="font-size: 30px;">Current BMI:</h2>
+        <p style="font-size: 30px;margin-bottom:20px;">{{bmi}}</p>
+        <p style="font-size: 25px;" [style.color]="bmiClassColor">{{bmiClass}}</p>
+      </div>
+  </div>
